--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,64 +1,108 @@
-<%= form_with(model: invoice) do |form| %>
-  <% if invoice.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(invoice.errors.count, "error") %> prohibited this invoice from being saved:</h2>
+<div class="m-7 bg-white p-7">
+  <%= form_with(model: invoice) do |form| %>
+    <% if invoice.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(invoice.errors.count, "error") %> prohibited this invoice from being saved:</h2>
 
-      <ul>
-        <% invoice.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <ul>
+          <% invoice.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="flex items-center justify-between">
+      <div>
+        <div>
+          <%= form.label :number, style: "display: block" %>
+          <%= form.text_field :number, class:"border border-gray-700 p-2" %>
+        </div>
+
+        <div>
+          <%= form.label :date, style: "display: block" %>
+          <%= form.date_field :date, value: Date.today, class:"border border-gray-700 p-2" %>
+        </div>
+
+        <div>
+          <%= form.label :to, style: "display: block" %>
+          <%= form.text_area :to, class:"border border-gray-700 p-2 w-full", rows: 5, cols: 50 %>
+        </div>
+      </div>
+
+      <div class="flex flex-col">
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+        <h1>|</h1>
+      </div>
+      
+      <div>
+        <p class="text-lg font-bold">
+          From.
+          M/S SAPNA ENTERPRISES
+          R/O SHOP NO.1-9491/1/1,
+          SHABAZ COLONY T C,
+          Kalaburagi.
+        </p>
+
+        <p class="text-lg font-bold">
+          GST : 29DEZPK1132R1ZJ <br/>
+          PAN : DEZPK1132R 
+        </p>
+      </div>
+
+    </div>
+
+      <table class="min-w-full divide-y divide-gray-200 overflow-x-auto">
+        <thead class="bg-gray-50">
+          <tr>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Description
+            </th>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Rate
+            </th>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Quantity
+            </th>
+            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Amount
+            </th>
+          </tr>
+        </thead>
+      </table>
+    <div id="items">
+      <%= form.fields_for :items do |item| %>
+        <%= render "item_fields", f: item %>
+      <% end %>
+
+
+      <div class="grid place-items-center">
+        <%= link_to_add_association form, :items, style:"color: #0ee50e;" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+          </svg>
         <% end %>
-      </ul>
+      </div>
+    </div>
+
+    <div>
+      <%= form.label :total_amount, style: "display: block" %>
+      <%= form.text_field :total_amount %>
+    </div>
+
+    <div>
+      <%= form.submit class:"bg-yellow-400 p-3 hover:cursor-pointer hover:bg-yellow-600 mt-5" %>
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :number, style: "display: block" %>
-    <%= form.text_field :number %>
-  </div>
-
-  <div>
-    <%= form.label :date, style: "display: block" %>
-    <%= form.date_field :date %>
-  </div>
-
-  <div>
-    <%= form.label :to, style: "display: block" %>
-    <%= form.text_area :to %>
-  </div>
-
-  <div>
-    <%= form.label :total_amount, style: "display: block" %>
-    <%= form.text_field :total_amount %>
-  </div>
-
-    <table class="min-w-full divide-y divide-gray-200 overflow-x-auto">
-      <thead class="bg-gray-50">
-        <tr>
-          <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-            Description
-          </th>
-          <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-            Rate
-          </th>
-          <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-            Quantity
-          </th>
-          <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-            Amount
-          </th>
-        </tr>
-      </thead>
-    </table>
-   <div id="items">
-        <%= form.fields_for :items do |item| %>
-          <%= render "item_fields", f: item %>
-        <% end %>
-
-
-      <%= link_to_add_association 'add item', form, :items %>
-    </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
