--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New invoice</h1>
+<h1 class="text-center font-extrabold text-slate-700 mt-12">New invoice</h1>
 
 <%= render "form", invoice: @invoice %>
 
