--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,10 +1,116 @@
 <p style="color: green"><%= notice %></p>
+<div class="bg-white p-7">
+  <div class="flex items-center justify-between">
+        <div>
+          <div>
+            <span class="font-bold text-lg">INVOICE/BILL NO:</span> <span class="font-bold text-medium"><%= @invoice.number %></span>
+          </div>
 
-<%= render @invoice %>
+          <div>
+            <span class="font-bold text-lg">INVOICE DATE :</span> <span class="font-bold text-medium"><%= @invoice.date %></span>
+          </div>
 
-<div>
-  <%= link_to "Edit this invoice", edit_invoice_path(@invoice) %> |
-  <%= link_to "Back to invoices", invoices_path %>
+          <div>
+            <span class="font-bold text-lg">To.</span><br/><span class="font-bold text-medium"><%= @invoice.to %></span>
+          </div>
+        </div>
 
-  <%= button_to "Destroy this invoice", @invoice, method: :delete %>
+        <div class="flex flex-col">
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+          <h1>|</h1>
+        </div>
+        
+        <div>
+          <p class="text-lg font-bold">
+            From.
+            M/S SAPNA ENTERPRISES
+            R/O SHOP NO.1-9491/1/1,
+            SHABAZ COLONY T C,
+            Kalaburagi.
+          </p>
+
+          <p class="text-lg font-bold">
+            GST : 29DEZPK1132R1ZJ <br/>
+            PAN : DEZPK1132R 
+          </p>
+        </div>
+
+      </div>
+  <table class="min-w-full divide-y divide-gray-200 overflow-x-auto">
+    <thead class="bg-gray-50">
+      <tr>
+        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+          Description
+        </th>
+        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+          Rate
+        </th>
+        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+          Quantity
+        </th>
+        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+          Amount
+        </th>
+      </tr>
+    </thead>
+    <tbody class="bg-white divide-y divide-gray-200">
+    <% @invoice.items.each do |item| %>
+      <tr>
+        <td class="px-6 py-4 whitespace-nowrap border border-gray-500">
+          <div class="field text-sm text-gray-900">
+            <%= item.description %>
+          </div>
+        </td>
+
+        <td class="px-6 py-4 whitespace-nowrap border border-gray-500">
+          <div class="field text-sm text-gray-900">
+            <%= item.rate %>
+
+          </div>
+        </td>
+
+        <td class="px-6 py-4 whitespace-nowrap border border-gray-500">
+          <div class="field text-sm text-gray-900">
+            <%= item.quantity %>
+
+          </div>
+        </td>
+
+        <td class="px-6 py-4 whitespace-nowrap border border-gray-500">
+          <div class="field text-sm text-gray-900">
+            <%= item.amount %>
+          </div>
+        </td>
+
+      </tr>
+
+    <% end %>
+      <tr>
+        <td colspan='3' class="px-6 py-4 whitespace-nowrap border border-gray-500 text-end"><b>Total.</b></td>
+        <td colspan='1' class="px-6 py-4 whitespace-nowrap border border-gray-500">1000 Rs.</td>
+
+      </tr>
+    </tbody>
+  </table>
+  <div class='my-4 text-medium font-bold'>
+    Note: This GST Bill, is under composition scheme
+  </div>
+
+  <div>
+    <%= link_to "Edit this invoice", edit_invoice_path(@invoice) %> |
+    <%= link_to "Back to invoices", invoices_path %>
+
+    <%= button_to "Destroy this invoice", @invoice, method: :delete %>
+  </div>
+
 </div>
