--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing invoice</h1>
+<h1 class="text-center text-3xl font-extrabold text-slate-700 mt-12">Editing invoice</h1>
 
 <%= render "form", invoice: @invoice %>
 
