--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,8 +1,57 @@
 <p style="color: green"><%= notice %></p>
+
 <div class="bg-white">
-  <div class="grid place-items-end">
-    <%= image_tag "sapna_header.jpg" %>
+  <div class="flex justify-between items-center border border-gray-300 p-8 relative">
+  <!-- Company Name Section -->
+  <div>
+    <div class="flex items-center justify-start gap-3">
+      <h2 class="font-extrabold text-yellow-500 text-5xl">Sapna</h2>
+      <h2 class="font-extrabold text-yellow-500 text-3xl mt-3">Enterprises</h2>
+    </div>
+
+    <!-- Contact Information Section -->
+    <div class="flex items-center justify-between mt-2 gap-4">
+      <div class="flex items-center justify-center text-slate-600">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
+        </svg>
+        <span class='text-sm'>+91 88809 19777</span>
+      </div>
+
+      <div class="flex items-center justify-center gap-1 text-slate-600">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0 1 12 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 0 1 3 12c0-1.605.42-3.113 1.157-4.418" />
+        </svg>
+
+        <span class='text-sm'>www.sapnaxerox.in</span>
+      </div>
+
+      <div class="flex items-center justify-center text-slate-600">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
+        </svg>
+        <span class='text-sm'>SHOP NO.1-9491/1/1, SHABAZ COLONY T C,KALABURAGI 585-101</span>
+      </div>
+    </div>
   </div>
+  
+  <!-- Shapes -->
+  <!-- Left Triangle -->
+  <div class="absolute left-0 top-4 transform -translate-x-8 -translate-y-8">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="text-gray-300 w-16 h-16">
+      <path fill-rule="evenodd" d="M10 0L0 20h20L10 0zm-1.42 16.6L2.8 10 8.6 3.4 15.16 10l-5.78 6.6zM13.4 10l-5.6 6.4L4 10l3.8-4.4 5.6 6.4z" clip-rule="evenodd" />
+    </svg>
+  </div>
+  
+  <!-- Right Triangle -->
+  <div class="absolute right-0 bottom-0 transform translate-x-8 -translate-y-8">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="text-gray-300 w-16 h-16">
+      <path fill-rule="evenodd" d="M10 0L0 20h20L10 0zm-1.42 16.6L2.8 10 8.6 3.4 15.16 10l-5.78 6.6zM13.4 10l-5.6 6.4L4 10l3.8-4.4 5.6 6.4z" clip-rule="evenodd" />
+    </svg>
+  </div>
+</div>
+
   
   <div class="p-7">
 
@@ -16,24 +65,14 @@
             <span class="font-bold text-sm">INVOICE DATE :</span> <span class="font-bold text-medium"><%= @invoice.date %></span>
           </div>
 
-          <div>
-            <span class="font-bold text-sm">To.</span><br/><span class="font-bold text-medium"><%= @invoice.to %></span>
+            <span class="font-bold text-sm">To.</span><br/>
+          <div class="flex items-center justify-start w-[500px]">
+            <span class="font-bold text-medium"><%= @invoice.to %></span>
           </div>
         </div>
 
         <div class="flex flex-col">
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
-          <h1>|</h1>
+      
         </div>
         
         <div>
@@ -52,62 +91,51 @@
         </div>
 
       </div>
-  <table class="min-w-full divide-y divide-gray-200 overflow-x-auto">
-    <thead class="bg-gray-50">
-      <tr>
-        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-          Description
-        </th>
-        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-          Rate
-        </th>
-        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-          Quantity
-        </th>
-        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-          Amount
-        </th>
-      </tr>
-    </thead>
-    <tbody class="bg-white divide-y divide-gray-200">
-    <% @invoice.items.each do |item| %>
-      <tr>
-        <td class="px-6 py-4 whitespace-nowrap border border-gray-500">
-          <div class="field text-sm text-gray-900">
-            <%= item.description %>
-          </div>
-        </td>
 
-        <td class="px-6 py-4 whitespace-nowrap border border-gray-500">
-          <div class="field text-sm text-gray-900">
-            <%= item.rate %>
-
-          </div>
-        </td>
-
-        <td class="px-6 py-4 whitespace-nowrap border border-gray-500">
-          <div class="field text-sm text-gray-900">
-            <%= item.quantity %>
-
-          </div>
-        </td>
-
-        <td class="px-6 py-4 whitespace-nowrap border border-gray-500">
-          <div class="field text-sm text-gray-900">
-            <%= item.amount %>
-          </div>
-        </td>
-
-      </tr>
-
-    <% end %>
-      <tr>
-        <td colspan='3' class="px-6 py-4 whitespace-nowrap border border-gray-500 text-end"><b>Total.</b></td>
-        <td colspan='1' class="px-6 py-4 whitespace-nowrap border border-gray-500">1000 Rs.</td>
-
-      </tr>
-    </tbody>
-  </table>
+  
+<div class="relative overflow-x-auto">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+                <th scope="col" class="px-6 py-3">
+                    Description
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Rate
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Quantity
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Amount
+                </th>
+         
+            </tr>
+        </thead>
+        <tbody>
+          <% @invoice.items.each do |item| %>
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                <th scope="row" class="px-6 py-4 border">
+                  <%= item.description %>
+                </th>
+                <td class="px-6 py-4 border">
+                    <%= item.rate %>
+                </td>
+                <td class="px-6 py-4 border">
+                    <%= item.quantity %>
+                </td>
+                <td class="px-6 py-4 border">
+                  <%= item.amount %>
+                </td>
+            </tr>
+          <% end %>
+          <tr>
+            <td colspan='3' class="p-1 whitespace-nowrap border text-end"><b>Total.</b></td>
+            <td colspan='1' class="p-1 whitespace-nowrap border pl-6"><%= @invoice.total_amount %></td>
+          </tr>
+        </tbody>
+    </table>
+</div>
   <div class='my-4 text-medium font-bold'>
     Note: This GST Bill, is under composition scheme
   </div>
@@ -121,3 +149,6 @@
   </div>
 
 </div>
+
+
+
