--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -8,10 +8,11 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <%= wicked_pdf_stylesheet_link_tag "pdf" %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/4.0.0-alpha.14/lib.min.js" integrity="sha512-LTxGQ9e0m5BLj8PqkTeZdQIWBCGt2L1I3dZkprWs3lwsWkiXD1j+o2rttG+40TVOQPUpQC9rykk3RPX9Dny1Bg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
 
-  <body class="bg-gray-100 ">
+  <body>
     <%= yield %>
   </body>
 </html>
