--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-gray-100 ">
+  <body class="bg-gray-100 p-10">
+    <% if current_admin %>
+      <div>
+        <%= link_to "Log Out", destroy_admin_session_path, data:{turbo_method: :delete, turbo_confirm:"Are You Sure you want to Log Out?"}, class:"bg-red-700 hover:bg-red-800 p-2 text-white rounded" %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
