--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -2,11 +2,9 @@
   <%= form_with(model: invoice) do |form| %>
     <% if invoice.errors.any? %>
       <div style="color: red">
-        <h2><%= pluralize(invoice.errors.count, "error") %> prohibited this invoice from being saved:</h2>
-
         <ul>
           <% invoice.errors.each do |error| %>
-            <li><%= error.full_message %></li>
+            <li><%= error.full_message.remove("Items") %></li>
           <% end %>
         </ul>
       </div>
@@ -95,9 +93,11 @@
       </div>
     </div>
 
-    <div>
-      <%= form.label :total_amount, style: "display: block" %>
-      <%= form.text_field :total_amount %>
+    <div class="flex items-center justify-end">
+      <div>
+        <%= form.label :total_amount, style: "display: block" %>
+        <%= form.text_field :total_amount, disabled: true, class:"w-full border border-gray-700 rounded p-2 w-1/2" %>
+      </div>
     </div>
 
     <div>
