--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -4,7 +4,7 @@
 
 <br>
 
-<div>
-  <%= link_to "Show this invoice", @invoice %> |
-  <%= link_to "Back to invoices", invoices_path %>
+<div class="mb-10">
+  <%= link_to "Show this invoice", @invoice, class:"bg-gray-500 rounded hover:bg-gray-400 p-2 text-white" %> 
+  <%= link_to "Back to invoices", invoices_path, class:"bg-gray-500 rounded hover:bg-gray-400 p-2 text-white" %>
 </div>
