--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -5,6 +5,17 @@
   <%= link_to "New Invoice", new_invoice_path, class:"bg-yellow-500 p-3 hover:cursor-pointer hover:bg-yellow-600 my-8" %>
 </div>
 
+<div class="flex item-center justify-end mb-4">
+  <div class="flex items-center justify-center gap-3">
+    <%= form_with(url: invoices_path, method: :get) do |f| %>
+      <%= f.text_field :search, class:"border p-4 text-sm font-bold text-gray-700 focus:border-gray-400", placeholder:"Search Invoice Number" %>
+      <%= f.submit "Search", class:"bg-gray-500 p-3 hover:bg-gray-600 hover:cursor-pointer text-white" %>
+    <% end %>
+    <%= link_to "Reset", invoices_path, class:"p-3 text-white bg-rose-500 hover:bg-rose-600 hover:cursor-pointer" %>
+  </div>
+
+
+</div>
 <table class="min-w-full divide-y divide-gray-200 overflow-x-auto">
   <thead class="bg-gray-50">
     <tr>
@@ -63,3 +74,69 @@
   </tbody>
 </table>
 
+<div class="mt-6">
+  <style>
+      .pagy {
+        display: flex;
+      }
+
+      .pagy > :not([hidden]) ~ :not([hidden]) {
+        --space-reverse: 0;
+        margin-right: calc(0.25rem * var(--space-reverse));
+        margin-left: calc(0.25rem * calc(1 - var(--space-reverse)));
+      }
+
+      .pagy {
+        font-family: sans-serif;
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+        font-weight: 600;
+        color: rgb(107 114 128);
+      }
+
+      .pagy .page.gap {
+        /* if you need to customize it */
+      }
+
+      .pagy .page a {
+        display: block;
+        text-decoration: none;
+        border-radius: 0.5rem;
+        background-color: rgb(229 231 235);
+        padding: 0.25rem 0.75rem;
+        color: inherit;
+      }
+
+      .pagy .page a:hover {
+        background-color: rgb(209 213 219);
+      }
+
+      .pagy .page.active a {
+        cursor: default;
+        background-color: rgb(156 163 175);
+        color: rgb(255 255 255);
+      }
+
+      .pagy .page.disabled a {
+        cursor: default;
+        background-color: rgb(243 244 246);
+        color: rgb(209 213 219);
+      }
+
+      .pagy .pagy-combo-input, .pagy.pagy-items-selector-js {
+        white-space: nowrap;
+        display: inline-block;
+        border-radius: 0.5rem;
+        background-color: rgb(229 231 235);
+        padding: 0.125rem 0.75rem;
+      }
+
+      .pagy .pagy-combo-input input, .pagy.pagy-items-selector-js input {
+        line-height: 1.5rem;
+        border-radius: 0.375rem;
+        border-style: none;
+        background-color: rgb(243 244 246);
+      }
+    </style>
+  <%== pagy_nav(@invoices_pagy) if @invoices_pagy.pages > 1 %>
+</div>
