--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,5 +1,7 @@
 <p style="color: green"><%= notice %></p>
-<%= link_to 'This Invoice in PDF', invoice_path(@invoice, format: :pdf), target: :_blank %>
+<div class="grid place-items-center mb-4">
+  <%= link_to 'Download PDF', invoice_path(@invoice, format: :pdf), target: :_blank, class:"bg-green-500 p-3 hover:bg-green-600 text-white" %>
+</div>
 <div class="bg-white">
   <div class="flex justify-between items-center border border-gray-300 p-8 relative">
   <!-- Company Name Section -->
@@ -36,20 +38,6 @@
     </div>
   </div>
   
-  <!-- Shapes -->
-  <!-- Left Triangle -->
-  <div class="absolute left-0 top-4 transform -translate-x-8 -translate-y-8">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="text-gray-300 w-16 h-16">
-      <path fill-rule="evenodd" d="M10 0L0 20h20L10 0zm-1.42 16.6L2.8 10 8.6 3.4 15.16 10l-5.78 6.6zM13.4 10l-5.6 6.4L4 10l3.8-4.4 5.6 6.4z" clip-rule="evenodd" />
-    </svg>
-  </div>
-  
-  <!-- Right Triangle -->
-  <div class="absolute right-0 bottom-0 transform translate-x-8 -translate-y-8">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="text-gray-300 w-16 h-16">
-      <path fill-rule="evenodd" d="M10 0L0 20h20L10 0zm-1.42 16.6L2.8 10 8.6 3.4 15.16 10l-5.78 6.6zM13.4 10l-5.6 6.4L4 10l3.8-4.4 5.6 6.4z" clip-rule="evenodd" />
-    </svg>
-  </div>
 </div>
 
   
@@ -149,11 +137,19 @@
 
 </div>
 
-  <div>
-    <%= link_to "Edit this invoice", edit_invoice_path(@invoice) %> |
-    <%= link_to "Back to invoices", invoices_path %>
+  <div class="flex items-center justify-between p-10">
+    <%= link_to "Back to invoices", invoices_path, class:"bg-gray-500 rounded hover:bg-gray-400 p-2 text-white" %>
+    <%= link_to edit_invoice_path(@invoice), class:"hover:text-yellow-600" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
+      </svg>
+    <% end %>
 
-    <%= button_to "Destroy this invoice", @invoice, method: :delete %>
+    <%= link_to invoice_path(@invoice), data:{turbo_method: :delete, turbo_confirm:"Delete Invoice: #{@invoice.number} ?"}, class:"hover:text-red-400" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+      </svg>
+    <% end %>
   </div>
 
 
